--- a/index.html
+++ b/index.html
@@ -4,32 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .whatsapp-button {
-            display: inline-block;
-            background-color: #25D366;
-            color: white;
-            padding: 10px 20px;
-            font-size: 16px;
-            font-weight: bold;
-            text-align: center;
-            border: none;
-            border-radius: 5px;
-            text-decoration: none;
-            cursor: pointer;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s ease;
-        }
-
-        .whatsapp-button:hover {
-            background-color: #20b55b;
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
+    <title>Contact Amir on WhatsApp</title>
+  
 </head>
 
 <body>
-    <h1>Hi Its Amir Here Click the button Below To Contact Me</h1>
-    <a href="https://wa.me/+923400426044" class="whatsapp-button" target="_blank">Contact me on WhatsApp</a>
+    <div class="card">
+        <h1>Hi, It's Amir MA Here!</h1>
+        <img src="./WhatsApp Image 2024-07-12 at 23.22.18_a75df8a0.jpg" alt="Contact Amir">
+        <a href="https://wa.me/+923400426044" class="whatsapp-button" target="_blank">Contact me on WhatsApp</a>
+    </div>
 </body>
 
 </html>
